# flare

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README  README.md  citing.html  env.py  faqs.html  genindex.html  gp.py  index.html  objects.inv  otf.py  py-modindex.html  pyproject.toml  related.html  requirements.txt  search.html  searchindex.js  setup.py
CTests/: CMakeLists.txt  test_simple.cpp  test_y_grad.cpp
CTests/Descriptor/: test_bond_env.cpp  test_descriptor.cpp  test_radial.cpp  test_y_grad.cpp
CTests/Environment/: test_local_environment.cpp
CTests/Kernels/: test_kernels.cpp
CTests/Sparse_GP/: test_sparse_gp.cpp
CTests/Structure/: test_structure.cpp
ctests/: CMakeLists.txt  test_descriptor.cpp  test_kernels.cpp  test_n_body.cpp  test_parallel_sgp.cpp  test_sparse_gp.cpp  test_structure.cpp  test_structure.h
flarepp/timing/: CMakeLists.txt  prediction_benchmark.py
src/: B.h  CMakeLists.txt  ace.h  ace_binding.cpp  bpnnp.py  cutoffs.cpp  cutoffs.h  descriptor.cpp  descriptor.h  env.py  gp.py  kernels.cpp  kernels.h  local_environment.cpp  local_environment.h  nnp.py  otf.py  punchout.py  qe_util.py  radial.cpp  radial.h  single_bond.cpp  single_bond.h  sparse_gp.cpp  sparse_gp.h  struc.py  structure.cpp  structure.h  y_grad.cpp  y_grad.h
src/dev/: MD_Parser.py  kern_help.py  two_body.py
src/flare_pp/: CMakeLists.txt  compact_environments.cpp  compact_gp.cpp  compact_gp.h  compact_kernel.cpp  compact_kernel.h  compact_structure.cpp  compact_structure.h  compact_structures.cpp  cutoffs.cpp  cutoffs.h  descriptor.cpp  descriptor.h  dot_product_kernel.cpp  dot_product_kernel.h  json.h  kernels.cpp  kernels.h  local_environment.cpp  local_environment.h  radial.cpp  radial.h  single_bond.cpp  single_bond.h  sparse_gp.cpp  sparse_gp.h  sparse_gp_dtc.cpp  sparse_gp_dtc.h  structure.cpp  structure.h  three_body_kernel.cpp  three_body_kernel.h  two_body_kernel.cpp  two_body_kernel.h  utils.cpp  utils.h  y_grad.cpp  y_grad.h
src/flare_pp/bffs/: compact_gp.cpp  compact_gp.h  gp.cpp  gp.h  parallel_sgp.cpp  parallel_sgp.h  sparse_gp.cpp  sparse_gp.h  sparse_gp_dtc.cpp  sparse_gp_dtc.h
src/flare_pp/descriptors/: b1.cpp  b1.h  b2.cpp  b2.h  b2_embed.cpp  b2_embed.h  b2_embed_multilayer.cpp  b2_embed_multilayer.h  b2_norm.cpp  b2_norm.h  b2_simple.cpp  b2_simple.h  b3.cpp  b3.h  compact_descriptor.cpp  compact_descriptor.h  descriptor.cpp  descriptor.h  four_body.cpp  four_body.h  three_body.cpp  three_body.h  three_body_wide.cpp  three_body_wide.h  two_body.cpp  two_body.h  wigner3j.cpp  wigner3j.h
src/flare_pp/kernels/: dot_product.cpp  dot_product.h  kernel.cpp  kernel.h  norm_dot_icm.cpp  norm_dot_icm.h  normalized_dot_product.cpp  normalized_dot_product.h  squared_exponential.cpp  squared_exponential.h
src/flare_pp/v2/: compact_descriptor.cpp  compact_descriptor.h  compact_environments.h  compact_kernel.cpp  compact_structure.h  (+3 more)
test/: CMakeLists.txt  test_bond_env.cpp  test_descriptor.cpp  test_kernels.cpp  test_local_environment.cpp  test_main.cpp  test_nn.py  test_radial.cpp  test_single_bond.cpp  test_single_bond_sum.cpp  test_sparse_gp.cpp  test_structure.cpp  test_y_grad.cpp
tests/: Al.wfc1  Al.wfc2  CMakeLists.txt  al_otf-f.xyz  al_otf-f.xyz-bak  al_otf-hyps.dat-bak  al_otf.out  al_otf.out-bak  al_otf.xyz  al_otf.xyz-bak  alog  fake_gp.py  get_sgp.py  h2_otf-f.xyz  h2_otf-f.xyz-bak  h2_otf-hyps.dat-bak  h2_otf.out  h2_otf.out-bak  h2_otf.xyz  h2_otf.xyz-bak  mgp_test.py  otf_run.out  pwscf.in  pwscf.out  pwscf.wfc1  pwscf.wfc2  qe_input_1.in_run  qe_output_1.out  sample_al_otf.out  sample_h2_otf.out  test_ChemicalEnvironment.py  test_GaussianProcess.py  test_OTF.py  test_OTF_Struc.py  test_OTF_cp2k.py  test_OTF_cp2k_par.py  test_OTF_qe.py  test_OTF_qe_par.py  test_OTF_vasp.py  test_analyze_otf.py  (+76 more)
tests/Al.save/: data-file.xml
tests/ase_otf/: al.py  al.traj  atom_setup.py  flare_setup.py  get_traj.py  otf_setup.py  qe_setup.py
tests/legacy_tests/: test_ase_otf.py  test_cp2k_util.py  test_flare_io.py
tests/mff/: check_lammps.py  check_mc.py  check_mff.py  lj_forces.npy  store_predictions.npy  test_mff.sh
tests/mgp_grids/: 3_H_He_He_mean.npy  3_H_He_Li_mean.npy  3_H_Li_He_mean.npy  3_H_Li_Li_mean.npy  3_He_H_He_mean.npy  3_He_H_Li_mean.npy  3_He_He_H_mean.npy  3_He_He_He_mean.npy  3_He_He_Li_mean.npy  3_He_Li_H_mean.npy  3_He_Li_He_mean.npy  3_He_Li_Li_mean.npy  3_Li_H_He_mean.npy  3_Li_H_Li_mean.npy  3_Li_He_H_mean.npy  3_Li_He_He_mean.npy  3_Li_He_Li_mean.npy  3_Li_Li_H_mean.npy  3_Li_Li_He_mean.npy
tests/pwscf.save/: data-file.xml  paw.txt
tests/test_ase/: AgI.pwi  AgI.pwo  atom_setup.py  flare_setup.py  otf.sh  otf_setup.py  qe_setup.py  test.out  test_ase_otf.py
tests/test_ase_setup/: .otf_setup.py.swp  atom_setup.py  flare_setup.py  otf_setup.py  qe_setup.py  test_ase_otf.py  test_ase_otf.sh  test_otf.py  test_parse_otf.py  test_stress.py
tests/test_files/: 4H_SiC_jittered.xyz  AgI_snippet.out  HHe.json  NPT_1.out  NPT_1.out-bak  VelocityVerlet_1.out  VelocityVerlet_1.out-bak  cp2k_input_1.in  cp2k_input_2.in  cp2k_input_3.in  cp2k_output_1.out  dummy_vasp.py  fake_traj.xyz  gpfa_parse_test.out  methanol_envs.json  methanol_frames.json  methanol_gp.json  otf_output_1.out  otf_output_2.out  output.out  qe_input_1.in  qe_input_2.in  qe_input_3.in  qe_input_4.in  qe_output_1.out  qe_output_4.out  sample_al_otf.out  sample_h2_otf.out  sample_slab_otf.out  sic_dft.xyz  stress.lammps  test_POSCAR  test_POSCAR_2  test_env_list  test_vasprun.xml  test_vasprun_h2.xml
tests/test_lammps/: 000_3.npy  001_3.npy  00_2.npy  010_3.npy  011_3.npy  01_2.npy  100_3.npy  101_3.npy  110_3.npy  111_3.npy  11_2.npy  CH2.txt  CH23.txt  CH3.txt  check_mc.py  lj_pos.npy  lj_preds.npy  lj_seps.npy  lj_species.npy  lj_vars.npy  store_forces.npy  store_predictions.npy  test.py  write_coefs.py
tests/test_mff/: Al2+3.npy  test_mc.py  test_mff.py
tests/test_outputs/: al_otf.out  h2_otf.out
tests/test_outputs_qe/: h2_otf_qe.out
(+1073 files in other folders)
